# agentgate

./: .env.example  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  audit.py  auth.py  config.py  db.py  main.py  models.py  openapi_tools.py  policy.py  proxy.py  rate_limit.py  schemas.py  tracing.py
app/routers/: agents.py  audit.py  auth_router.py  deps.py  gateway.py  policies.py  tools.py
demo/: demo_agent.py  ecommerce_openapi.json
sample_api/: main.py
tests/: conftest.py  test_admin_endpoints.py  test_app_bootstrap.py  test_audit_replay.py  test_auth.py  test_auth_unit.py  test_gateway_e2e.py  test_openapi_tools.py  test_policy.py  test_proxy.py  test_rate_limit.py
